<resources>
    <string name="app_name">LiveDive</string>

    <string name="hint_diveTitle">Dive Site</string>
    <string name="hint_diveDescription">Entry</string>
    <string name="hint_diveDepth">Max Depth</string>
    <string name="hint_weight">Weight(lbs)</string>
    <string name="hint_weather">Weather</string>
    <string name="hint_ocean">Ocean</string>
    <string name="hint_wildlife">Wildlife</string>
    <string name="hint_POI">Points of Interest</string>
    <string name="hint_addionalNotes">Additional Notes</string>

    <string name="button_addDive">Add Dive</string>
    <string name="button_addImage"> Add Cover Image </string>
    <string name="button_addWildlifeImage"> Add Wildlife Image </string>
    <string name="button_addPOIImage"> Add Image </string>
    <string name="button_location">Set Location</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_expand">Expand</string>
    <string name="button_details">Dive Details</string>
    <string name="button_siteLocation">Dive Location</string>
    <string name="button_diveDate">Date of Dive</string>
    <string name="button_equipment">Dive Equipment</string>
    <string name="button_conditions">Dive Conditions</string>
    <string name="button_wildlife">Marine Life</string>
    <string name="button_poi">Points of Interest</string>
    <string name="button_settings">Update and Sign In</string>
    <string name="button_passwordReset">Reset Password</string>
    <string name="button_profilePic">Set Profile Image</string>
    <string name="button_changeEmail">Update Email</string>


    <string name="menu_showMap">Map of Sites</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_addDive">Add</string>
    <string name="menu_cancelDive">Cancel</string>
    <string name="menu_saveDive">Save</string>
    <string name="menu_deleteDive">Delete</string>
    <string name="menu_cancel">Cancel Update</string>

    <string name="title_activity_dive_list">Dive Log</string>
    <string name="title_activity_dive">Log Dive</string>
    <string name="title_activity_location">Dive Sites</string>
    <string name="title_activity_login"> Signup/Login to Live Dive</string>
    <string name="title_activity_map">Map of Dive Sites</string>
    <string name="title_settings">Settings</string>
    <string name="title_register">Settings</string>

    <string name="dive_image_placeholder">Dive Image</string>
    <string name="dive_title_placeholder">Dive Title</string>
    <string name="dive_description_placeholder">Dive Description</string>

    <string name="select_dive_image">Select Dive Image</string>
    <string name="change_dive_image">Change Dive Image</string>
    <string name="change_wildlife_image">Change Wildlife Image</string>
    <string name="change_POI_image">Change POI Image</string>


    <string name="enter_dive_title"> Please Enter Name of Dive Site </string>
    <string name="save_dive"> Save Dive </string>


</resources>